--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
-sqlalchemy==2.0.23
-asyncpg==0.29.0
+fastapi==0.115.4
+uvicorn[standard]==0.32.1
+pydantic==2.10.3
+python-multipart==0.0.20
+python-dotenv==1.0.1
+sqlalchemy==2.0.36
+asyncpg==0.30.0
+greenlet==3.1.1
