--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,8 @@
-# Backend Configuration
+# Supabase Configuration
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your-anon-key-here
+
+# API Configuration
 API_HOST=0.0.0.0
-API_PORT=3000
-
-# Database URL
-# SQLite (local): sqlite+aiosqlite:///./data/memes.db
-# PostgreSQL: postgresql+asyncpg://user:password@host:5432/database
-DATABASE_URL=postgresql+asyncpg://postgres:your_password@your_host.supabase.co:5432/postgres
-
-# CORS Settings
-CORS_ORIGINS=["http://localhost:3000", "chrome-extension://*"]
+API_PORT=8000
+CORS_ORIGINS=chrome-extension://*,http://localhost:*
