--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,35 +4,12 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
 venv/
 env/
 ENV/
 .venv
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
-data/*.db
-
-# Environment Variables
+# Environment variables
 .env
 
 # IDE
@@ -46,11 +23,12 @@ data/*.db
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-logs/
-
 # Testing
 .pytest_cache/
 .coverage
 htmlcov/
+
+# Distribution
+dist/
+build/
+*.egg-info/
