--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,6 @@
-fastapi==0.115.4
-uvicorn[standard]==0.32.1
-pydantic==2.10.3
-python-multipart==0.0.20
-python-dotenv==1.0.1
-sqlalchemy==2.0.36
-asyncpg==0.30.0
-greenlet==3.1.1
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+supabase>=2.10.0
+python-dotenv>=1.0.0
+pydantic>=2.10.0
+pydantic-settings>=2.6.0
