--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,11 @@
     "alarms"
   ],
   "host_permissions": [
-    "http://localhost:3000/*",
-    "https://*/*"
+    "http://localhost:8000/*",
+    "<all_urls>"
   ],
   "action": {
-    "default_popup": "popup/popup.html",
+    "default_popup": "popup/dist/index.html",
     "default_icon": {
       "16": "assets/icons/icon16.png",
       "48": "assets/icons/icon48.png",
@@ -27,7 +27,11 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["utils/storage.js", "utils/api.js", "content/detector.js", "content/overlay.js", "content/content.js"],
+      "js": [
+        "content/content.js",
+        "content/detector.js",
+        "content/overlay.js"
+      ],
       "css": ["content/content.css"],
       "run_at": "document_idle"
     }
@@ -37,7 +41,10 @@
     "48": "assets/icons/icon48.png",
     "128": "assets/icons/icon128.png"
   },
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
-  }
+  "web_accessible_resources": [
+    {
+      "resources": ["content/content.css"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
